# plest

./: .gitignore  LICENSE  README.md  Untitled.ipynb  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
images/dev/: docker-compose-prepare.yml  dockerfile  pyproject.toml
images/dev/app/: stix.py
images/dev/mappings/: policies.json
mappings/: policies.json  template.json
plest/: stix.py
scripts/: plaso.sh  setup.sh  stix.py
services/elasticsearch/: docker-compose.yml
services/nsrlsvr/: docker-compose.yml
settings/dev/: dockerfile  pyproject.toml
settings/dev/app/: stix.py
settings/kibana/: kibana.yml
settings/svr/: docker-compose-prepare.yml
