[tool.poetry]
name = "plest"
version = "0.1.0"
description = ""
authors = ["Olof Beckman <olof.beckman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
docker = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
