[tool.poetry]
name = "plest"
version = "0.1.0"
description = ""
authors = ["Olof Beckman <olof.beckman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.1.0"
elasticsearch = {extras = ["async"], version = "^7.12.0"}
elasticsearch-dsl = "^7.3.0"
orjson = "^3.5.1"
pandas = "^1.2.4"
pydantic = "^1.8.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
